tests/rosetta/transpiler/Clojure/call-an-object-method-3.error
run error: exit status 1
Execution error (NullPointerException) at main/-main (call-an-object-method-3.clj:23).
Cannot invoke "clojure.lang.IFn.invoke()"

Full report at:
/tmp/clojure-8370907555381941777.edn
