tests/rosetta/transpiler/Clojure/call-an-object-method-3.clj
(ns main (:refer-clojure :exclude [New]))

(require 'clojure.set)

(defn in [x coll]
  (cond (string? coll) (clojure.string/includes? coll x) (map? coll) (contains? coll x) (sequential? coll) (some (fn [e] (= e x)) coll) :else false))

(defn padStart [s w p]
  (loop [out (str s)] (if (< (count out) w) (recur (str p out)) out)))

(def nowSeed (atom (let [s (System/getenv "MOCHI_NOW_SEED")] (if (and s (not (= s ""))) (Integer/parseInt s) 0))))

(declare New)

(declare New_b box)

(defn New []
  (try (do (def New_b {:Contents "rabbit" :secret 1}) (throw (ex-info "return" {:v New_b}))) (catch clojure.lang.ExceptionInfo e (if (= (ex-message e) "return") (get (ex-data e) :v) (throw e)))))

(def box (New))

(defn -main []
  ((:TellSecret box)))

(-main)
